--- a/MvvmTools.Core/Views/OptionsTemplateMaintenanceUserControl.xaml
+++ b/MvvmTools.Core/Views/OptionsTemplateMaintenanceUserControl.xaml
@@ -23,50 +23,68 @@
     <Grid Margin="5">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
 
         <!--  Header  -->
         <views:HeaderUserControl />
 
-        <GroupBox Margin="0,15,0,0" Header="My Templates">
+        <GroupBox Grid.Row="1"
+                  Margin="0,15,0,0"
+                  Header="MVVM Templates">
             <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition />
+                    <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
 
-                <RichTextBox Margin="0,5,0,0"
-                             BorderThickness="0"
-                             IsReadOnly="True"
-                             IsReadOnlyCaretVisible="False"
-                             IsTabStop="False">
-                    <FlowDocument>
-                        <Paragraph>
-                            You can create your own templates by creating .TPL files.  Each .TPL can contain
-                            <Bold>several</Bold>
-                            templates, for organizational purposes, or you can split each template into a separate .TPL file.
-                            The filename of the template will be used as the
-                            displayed '
-                            <Italic>Source</Italic>
-                            ' of those templates in the Templates list.
-                        </Paragraph>
-
-                        <Paragraph>
-                            .TPL files are a mixture of INI and T4.  To get started, press the '
-                            <Bold>Create Sample.tpl Template</Bold>
-                            button, and read the comments inside it fully.
-                        </Paragraph>
-                    </FlowDocument>
-                </RichTextBox>
-
-
+                <!--  View Suffixes  -->
+                <DataGrid x:Name="TemplatesDataGrid"
+                          Grid.Row="0"
+                          Grid.Column="0"
+                          AutoGenerateColumns="False"
+                          CanUserAddRows="False"
+                          CanUserDeleteRows="False"
+                          CanUserReorderColumns="False"
+                          CanUserResizeColumns="False"
+                          CanUserResizeRows="False"
+                          CanUserSortColumns="False"
+                          GridLinesVisibility="None"
+                          HeadersVisibility="None"
+                          ItemsSource="{Binding Templates}">
+                    <DataGrid.Columns>
+                        <DataGridTemplateColumn Width="*">
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate DataType="viewModels:StringViewModel">
+                                    <TextBlock MouseLeftButtonDown="UIElement_OnMouseLeftButtonDown"
+                                               Padding="3,1"
+                                               Text="{Binding Value,
+                                                              Mode=OneWay}" />
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                    </DataGrid.Columns>
+                </DataGrid>
+                <StackPanel Grid.Row="0"
+                            Grid.Column="1"
+                            Margin="5,0,0,0"
+                            VerticalAlignment="Top">
+                    <Button Command="{Binding AddTemplateCommand}"
+                            Content="Add"
+                            Padding="3,0" />
+                    <Button Margin="0,5,0,0"
+                            Command="{Binding EditTemplateCommand}"
+                            Content="Edit"
+                            Padding="3,0" />
+                    <Button Margin="0,5,0,0"
+                            Command="{Binding DeleteTemplateCommand}"
+                            Content="Delete"
+                            Padding="3,0" />
+                    <Button Margin="0,30,0,0"
+                            Command="{Binding CopyTemplateCommand}"
+                            Content="Defaults"
+                            Padding="3,0" />
+                </StackPanel>
             </Grid>
         </GroupBox>
 
