--- a/MvvmTools.Core/Views/HeaderUserControl.xaml
+++ b/MvvmTools.Core/Views/HeaderUserControl.xaml
@@ -15,8 +15,10 @@
                    Margin="0,0,0,3"
                    HorizontalAlignment="Right"
                    VerticalAlignment="Bottom"
-                   FontSize="10"
-                   Text="By Chris Bordeman" />
+                   FontSize="10">
+            By
+            <Hyperlink Click="Hyperlink_OnClick" NavigateUri="mailto://mvvmtools@outlook.com">Chris Bordeman</Hyperlink>
+        </TextBlock>
         <Rectangle Grid.Row="0"
                    Height="1"
                    Margin="0,0,0,1"
