Added search box to templates and finished filtering.  Added Tags to template dialog.  Added View mode to Template dialog and alternated between 'Edit' and 'View' on the Template Maintenance options page.

--- a/MvvmTools.Core.Tests/Data/ViewModelCSharp.tt
+++ b/MvvmTools.Core.Tests/Data/ViewModelCSharp.tt
@@ -5,5 +5,5 @@
 <#@ import namespace="System.Collections.Generic" #>
 // <copyright file="$classname$" company="My Company Name">
 // Copyright (c) 2015 All Rights Reserved
-// <author>Chris Bordeman</author>]]>
+// <author>Chris Bordeman</author>
 // </copyright>
