--- a/MvvmTools.Core/Views/OptionsSolutionAndProjectsUserControl.xaml
+++ b/MvvmTools.Core/Views/OptionsSolutionAndProjectsUserControl.xaml
@@ -16,13 +16,13 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="../Styles/GroupBox.xaml" />
                 <ResourceDictionary Source="../Converters/Converters.xaml" />
-                <ResourceDictionary Source="../Styles/Validation.xaml" />
+                <ResourceDictionary Source="../Styles/TextBoxEx.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
 
     <Grid>
-        <Grid Margin="5">
+        <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition />
@@ -42,7 +42,7 @@
                     </Grid.RowDefinitions>
 
                     <!--  Row 0 contains the solution and projects location options.  -->
-                    <GroupBox Margin="0,15,0,0" Header="Solution and Project Options">
+                    <GroupBox Header="Solution and Project Options">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto" />
