--- a/MvvmTools.Core/Views/OptionsTemplateMaintenanceUserControl.xaml
+++ b/MvvmTools.Core/Views/OptionsTemplateMaintenanceUserControl.xaml
@@ -1,10 +1,12 @@
 ﻿<UserControl x:Class="MvvmTools.Core.Views.OptionsTemplateMaintenanceUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:controls="clr-namespace:MvvmTools.Core.Controls"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewModels="clr-namespace:MvvmTools.Core.ViewModels"
              xmlns:views="clr-namespace:MvvmTools.Core.Views"
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              d:DataContext="{d:DesignInstance viewModels:OptionsViewModel,
                                               IsDesignTimeCreatable=False}"
              d:DesignHeight="300"
@@ -15,12 +17,12 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="../Styles/GroupBox.xaml" />
                 <ResourceDictionary Source="../Converters/Converters.xaml" />
-                <ResourceDictionary Source="../Styles/Validation.xaml" />
+                <ResourceDictionary Source="../Styles/TextBoxEx.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
 
-    <Grid Margin="5">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition />
@@ -29,19 +31,68 @@
         <!--  Header  -->
         <views:HeaderUserControl />
 
-        <GroupBox Grid.Row="1"
-                  Margin="0,15,0,0"
-                  Header="MVVM Templates">
+        <GroupBox Grid.Row="1" Header="MVVM Templates  ( View + Code Behind + View Model )">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
 
-                <!--  View Suffixes  -->
+                <!--  Filters  -->
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+
+                    <ComboBox Margin="0,0,3,0"
+                              DisplayMemberPath="Description"
+                              Focusable="False"
+                              ItemsSource="{Binding Platforms}"
+                              SelectedValue="{Binding SelectedPlatform}"
+                              SelectedValuePath="Value" />
+
+                    <ComboBox Grid.Column="1"
+                              Margin="3,0"
+                              DisplayMemberPath="Description"
+                              Focusable="False"
+                              ItemsSource="{Binding FormFactors}"
+                              SelectedValue="{Binding SelectedFormFactor}"
+                              SelectedValuePath="Value" />
+
+                    <ComboBox Grid.Column="2"
+                              Margin="3,0,0,0"
+                              DisplayMemberPath="Description"
+                              Focusable="False"
+                              ItemsSource="{Binding Frameworks}"
+                              SelectedValue="{Binding SelectedFramework}"
+                              SelectedValuePath="Value" />
+                </Grid>
+
+                <!--  Search Box  -->
+                <controls:TextBoxEx x:Name="SearchBox"
+                                    Grid.Row="1"
+                                    Grid.Column="0"
+                                    Margin="0,5,0,0"
+                                    ShowClearButton="True"
+                                    Text="{Binding SearchText,
+                                                   Mode=TwoWay,
+                                                   UpdateSourceTrigger=PropertyChanged,
+                                                   Delay=500}"
+                                    Watermark="Search..." />
+
+                <!--  Templates DataGrid  -->
                 <DataGrid x:Name="TemplatesDataGrid"
-                          Grid.Row="0"
+                          Grid.Row="2"
                           Grid.Column="0"
+                          Margin="0,5,0,0"
                           AutoGenerateColumns="False"
                           CanUserAddRows="False"
                           CanUserDeleteRows="False"
@@ -49,45 +100,120 @@
                           CanUserResizeColumns="False"
                           CanUserResizeRows="False"
                           CanUserSortColumns="False"
+                          CellStyle="{StaticResource NoFocusDataGridCell}"
                           GridLinesVisibility="None"
                           HeadersVisibility="None"
-                          ItemsSource="{Binding Templates}">
+                          ItemsSource="{Binding Templates}"
+                          Loaded="TemplatesDataGrid_OnLoaded"
+                          SelectionUnit="FullRow">
                     <DataGrid.Columns>
-                        <DataGridTemplateColumn Width="*">
+                        <DataGridTemplateColumn Width="*" Header="Name">
                             <DataGridTemplateColumn.CellTemplate>
-                                <DataTemplate DataType="viewModels:StringViewModel">
-                                    <TextBlock MouseLeftButtonDown="UIElement_OnMouseLeftButtonDown"
-                                               Padding="3,1"
-                                               Text="{Binding Value,
-                                                              Mode=OneWay}" />
+                                <DataTemplate DataType="viewModels:TemplateDialogViewModel">
+                                    <Grid MouseLeftButtonDown="UIElement_OnMouseLeftButtonDown">
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="Auto" />
+                                            <RowDefinition Height="Auto" />
+                                        </Grid.RowDefinitions>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition />
+                                            <ColumnDefinition />
+                                            <ColumnDefinition />
+                                        </Grid.ColumnDefinitions>
+
+                                        <!--  Name  -->
+                                        <TextBlock Grid.Row="0"
+                                                   Grid.ColumnSpan="3"
+                                                   FontWeight="Bold"
+                                                   Padding="3,1"
+                                                   Text="{Binding Name,
+                                                                  Mode=OneWay}"
+                                                   TextWrapping="WrapWithOverflow" />
+
+                                        <!--  Platforms  -->
+                                        <TextBlock Grid.Row="1"
+                                                   Grid.Column="0"
+                                                   FontSize="10"
+                                                   Padding="3,1"
+                                                   Text="{Binding Platforms.CheckedItemsCommaSeparated,
+                                                                  Mode=OneWay}"
+                                                   TextWrapping="WrapWithOverflow" />
+
+                                        <!--  Form Factors  -->
+                                        <TextBlock Grid.Row="1"
+                                                   Grid.Column="1"
+                                                   FontSize="10"
+                                                   Padding="3,1"
+                                                   Text="{Binding FormFactors.CheckedItemsCommaSeparated,
+                                                                  Mode=OneWay}"
+                                                   TextWrapping="WrapWithOverflow" />
+
+                                        <!--  Framework  -->
+                                        <TextBlock Grid.Row="1"
+                                                   Grid.Column="2"
+                                                   FontSize="10"
+                                                   Padding="3,1"
+                                                   Text="{Binding Framework,
+                                                                  Mode=OneWay}"
+                                                   TextWrapping="WrapWithOverflow" />
+                                    </Grid>
+
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
                     </DataGrid.Columns>
                 </DataGrid>
-                <StackPanel Grid.Row="0"
+
+                <!--  Add/Edit/Delete/Copy Buttons  -->
+                <StackPanel Grid.Row="2"
                             Grid.Column="1"
-                            Margin="5,0,0,0"
-                            VerticalAlignment="Top">
+                            Margin="5,5,0,0">
                     <Button Command="{Binding AddTemplateCommand}"
                             Content="Add"
-                            Padding="3,0" />
+                            Focusable="False"
+                            Padding="8,2" />
                     <Button Margin="0,5,0,0"
                             Command="{Binding EditTemplateCommand}"
-                            Content="Edit"
-                            Padding="3,0" />
+                            Content="{Binding TemplateEditButtonContent}"
+                            Focusable="False"
+                            Padding="8,2" />
                     <Button Margin="0,5,0,0"
                             Command="{Binding DeleteTemplateCommand}"
                             Content="Delete"
-                            Padding="3,0" />
-                    <Button Margin="0,30,0,0"
+                            Focusable="False"
+                            Padding="8,2" />
+                    <Button Margin="0,15,0,0"
                             Command="{Binding CopyTemplateCommand}"
-                            Content="Defaults"
-                            Padding="3,0" />
+                            Content="Copy"
+                            Focusable="False"
+                            Padding="8,2" />
                 </StackPanel>
+
+                <!--  Refresh Button  -->
+                <Button Grid.Row="2"
+                        Grid.Column="1"
+                        Margin="5,0,0,0"
+                        VerticalAlignment="Bottom"
+                        Command="{Binding RefreshTemplatesCommand}"
+                        Content="Refresh"
+                        Focusable="False"
+                        Padding="8,2" />
+
+                <!--  Template Description  -->
+                <TextBox Grid.Row="3"
+                         Grid.Column="0"
+                         Grid.ColumnSpan="2"
+                         Height="70"
+                         Margin="0,5,0,0"
+                         Background="Transparent"
+                         BorderThickness="0"
+                         HorizontalScrollBarVisibility="Disabled"
+                         IsReadOnly="True"
+                         Padding="0"
+                         Text="{Binding Templates.CurrentItem.Description}"
+                         TextWrapping="WrapWithOverflow"
+                         VerticalScrollBarVisibility="Auto" />
             </Grid>
         </GroupBox>
-
-
     </Grid>
 </UserControl>
