--- a/MvvmTools.Core/Views/StringDialog.xaml
+++ b/MvvmTools.Core/Views/StringDialog.xaml
@@ -1,6 +1,7 @@
 ﻿<UserControl x:Class="MvvmTools.Core.Views.StringDialog"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:controls="clr-namespace:MvvmTools.Core.Controls"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewModels="clr-namespace:MvvmTools.Core.ViewModels"
@@ -9,7 +10,7 @@
              d:DesignHeight="300"
              mc:Ignorable="d">
     <UserControl.Resources>
-        <ResourceDictionary Source="../Styles/Validation.xaml" />
+        <ResourceDictionary Source="../Styles/TextBoxEx.xaml" />
     </UserControl.Resources>
     <Grid Margin="10">
         <Grid.ColumnDefinitions>
@@ -22,13 +23,13 @@
         </Grid.RowDefinitions>
 
         <TextBlock Margin="0,0,5,0" Text="{Binding Label, FallbackValue='New Value:'}" />
-        <TextBox x:Name="ValueBox"
-                 Grid.Column="1"
-                 Loaded="ValueBox_OnLoaded"
-                 Text="{Binding Value,
-                                UpdateSourceTrigger=PropertyChanged,
-                                ValidatesOnDataErrors=True,
-                                NotifyOnValidationError=True}" />
+        <controls:TextBoxEx x:Name="ValueBox"
+                            Grid.Column="1"
+                            Loaded="ValueBox_OnLoaded"
+                            Text="{Binding Value,
+                                           UpdateSourceTrigger=PropertyChanged,
+                                           ValidatesOnDataErrors=True,
+                                           NotifyOnValidationError=True}" />
 
         <StackPanel Grid.Row="1"
                     Grid.ColumnSpan="2"
